--- a/rep001/package.json
+++ b/rep001/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rep1",
+  "homepage": "http://mattjared.github.io/reactreps",
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
